--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@react-oauth/google": "^0.13.4",
     "framer-motion": "^12.31.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.563.0",
     "next": "13.5.11",
     "react": "^18",
