--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-oauth/google": "^0.13.4",
+    "@supabase/supabase-js": "^2.78.0",
     "framer-motion": "^12.31.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.563.0",
